# KKCOM

./: .gitignore  CLAUDE.md  CPU_OPTIMIZATION.md  LICENSE  README.md  README_ICONS.md  RELEASE_NOTES.md  STANDALONE_BUILD.md  STATIC_LINKING_FIX.md  logo.ai  main.py  prepare_release.bat
.claude/: settings.local.json
KKCOM_CPP/: CMakeLists.txt  CMakeLists_test.txt  CMakeLists_windows.txt  KKCOM.rc  README.md  README_Windows.md  build.bat  build.sh  build_debug.bat  build_release.bat  build_simple.bat  build_standalone.bat  build_test.bat  build_test.sh  build_vcpkg.bat  compile_manual.bat  diagnose.bat  imgui.ini  install_and_run.bat  setup_vcpkg.bat  test_environment.bat
KKCOM_CPP/include/: ConfigManager.h  DebugConfig.h  ResourceManager.h  SerialApp.h  SerialManager.h  icon_data.h  launch_data.h  version.h
KKCOM_CPP/src/: ConfigManager.cpp  ResourceManager.cpp  SerialApp.cpp  SerialManager.cpp  main.cpp  test_serial.cpp
